public/css/main.css
/* ... */
nav.user-nav {
    float: right;
}

@sidebar-width: 72.5px;

div#threads-navigation {
    .border-sizing;
    height: 100%;
    margin: 0;
    width: @sidebar-width;
    position: fixed;
    top: 0;
    left: 0;
    padding-top: @header-height;
    background: #191818;
    text-align: center;
    z-index: +2;

    nav.sidebar-nav {
        width: @sidebar-width;

        ul {
            list-style-type: none;
            padding: 0;
            margin: 0 auto;
            text-align: center;

            li {
                width: @sidebar-width;
                .border-sizing;
                display: inline-block;
                text-decoration: none;
                color: #aaa !important;
                padding: 15px 5px;
                width: @sidebar-width;
                cursor: pointer;
                line-height: 1;

                span.title {
                    display: block;
                    font-size: 25px;
                    color: #bbb;
                    margin: 0 0 5px 0;
                }

                span.selection {
                    font-size: 12px;
                    text-align: center;
                    cursor: pointer;
                    line-height: 1;
                }

                span.user-preview {
                    font-size: 12px;
                    text-align: center;
                    cursor: pointer;
                }

                a {
                    display: block;
                    color: #aaa !important;
                }

                span.messages-indicator {
                    display: block;
                    margin: 5px 0 0 0;
                    font-size: 12px;
                    color: #00a5d9;

                    span.icon-envelope-alt {
                        margin-right: 2px;
                    }
                }

            }

            li.unhoverable {
                cursor: default;
                padding: 5px;
            }

            li:not(.unhoverable):hover {
                background: rgba(255, 255, 255, 0.03);
            }

            li.user-link.me {
                overflow: hidden;

                img.avatar {
                    display: inline;
                    margin-bottom: 5px;
                    opacity: 0.8;
                }

                span.group {
                    font-size: 10px;
                }
            }

            li.user-link.messages a {
                color: #91f5f5 !important;
            }

            li:first-child {
                padding-top: 15px;
            }

            img.avatar {
                margin: 0 !important;
            }
        }

    }

}

/* keep out to use elsewhere */
span.messages-indicator.unread {
    color: #00a5d9 !important;
}

nav > ul {
    margin: 0;
    padding: 0;
    list-style-type: none;
}

ul.main-nav {

    li.search-bar {
        margin-right: 10px;
        cursor: default;
    }

    li, a {
        display: inline-block;
        float: left;
        line-height: @header-height;
        cursor: pointer;
    }

    a {
        padding: 0 12px;
    }

    a.search {
        padding-left: 5px;
    }

    a:not(.search):hover {
        background: rgba(0, 0, 0, 0.1);
    }
}

/*search highlighting*/
span.highlight {
    background: rgba(89,180,207, 0.2);
}

/*Homepage threads view*/
#threads {
    .border-sizing;
    width: 100%;
    margin: 0 auto;
    padding: 0 0 0 @sidebar-width;
    position: relative;
}

#no-sort-header {
    background: #292929;
    color: #d0d0d0;
    height: 40px;
    line-height: 40px;
    font-size: 15px;

    div.no-sort-header-column {
        display: inline-block;
        float: left;
        height: 40px;
    }

    div.no-sort-header-column:nth-child(1) {
        .border-sizing;
        width: 66%;
        padding-left: 15px;
        text-align: left;
    }

    div.no-sort-header-column:nth-child(2) {
        width: 14%;
        padding-left: 2.5%;
        font-size: 13px;
    }

    div.no-sort-header-column:nth-child(3) {
        width: 13.5%;
        padding-left: 2.5%;
        font-size: 13px;
    }
}

#no-sort-header.fixed {
    .border-sizing;
    position: fixed;
    top: 0;
    right: 0;
    height: 50px;
    line-height: 50px;
    width: 100%;
    padding-left: 65px;
    z-index: +2;
    background: #b31b1b url('/img/ezra.png') no-repeat 0 0;
    color: #eee !important;
}

#thread-scroll-header {
    display: none;
    .border-sizing;
    position: fixed;
    top: 0;
    right: 0;
    width: 100%;
    padding-left: 80px;
    z-index: +2;
    height: 50px;
    line-height: 50px;
    background: #b31b1b url('/img/ezra.png') no-repeat 0 0;
    color: #eee !important;

    h2 {
        font-size: 15px;
        color: #fff;

        span.ezra-hub {
            font-size: 20px;
            margin-left: 3px;
        }

        em {
            margin-right: 2px;
        }

        img.avatar {
            position: relative;
            top: -1px;
        }
    }
}

span.no-threads-yet {
    display: inline-block;
    margin: 15px 18px;
    color: #777;
    font-size: 14px;
}

/* rows */
@row-height: 40px;
div.thread-row {
    padding: 0;
    height: @row-height;
    line-height: @row-height;
}

div.thread-row:not(.sticky, .unread, .locked):nth-child(2n+2) {
    background: #f8f8f8;
}

div.thread-row.unread {
    background: rgba(0, 136, 204, 0.12);
}

div.thread-row.locked {
    opacity: 0.6;
}

div.thread-row.sticky {
    background: rgba(250, 210, 50, 0.4);

    span.thread-title {
        color: #9f8004 !important;
    }
}

/* sections */
div.main-section, div.secondary-section {
    .border-sizing;
    display: inline-block;
    float: left;
    height: @row-height;
    line-height: @row-height;
}

div.main-section {
    width: 67%;
}

div.secondary-section {
    width: 33%;
}

/* columns */
div.thread-column {
    display: inline-block;
    float: left;

    p {
        display: inline-block;
        margin: 0;
    }
}
/* ... */

